# laser-prynter

./: .gitignore  Makefile  README.md  pyproject.toml
.github/hooks/: pre-commit
.github/workflows/: ruff.yml
laser_prynter/: bench.py  log.py  pbar.py  pp.py
laser_prynter/colour/: c.py  gradient.py
pp/: pp.py
pprint_ndjson/: bench.py  log.py
pprint_ndjson/colour/: gradient.py
test/pp/: test_c.py  test_pp.py
test/pprint_ndjson/: test_c.py  test_pprint_ndjson.py
