[project]
name = "laser-prynter"
version = "0.3.0"
authors = [{ name = "tmck-code", email = "tmck01@gmail.com" }]
description = "terminal/cli/python helpers for colour and pretty-printing"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "pygments",
]

[dependency-groups]
dev = [
  "build",
  "mypy",
  "ruff",
  "twine",
]

[project.urls]
Homepage = "https://github.com/tmck-code/laser-prynter"
Issues = "https://github.com/tmck-code/laser-prynter/issues"

[tool.ruff]
exclude = ["bin/", ".venv/", "test/"]
line-length = 100
preview = true

[tool.ruff.lint]
fixable = ["ALL"]
dummy-variable-rgx = "^_$" # ignore variables named "_".

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
disallow_untyped_defs = true # no functions without type annotations
warn_return_any = true       # warn about functions that return Any
ignore_missing_imports = true # ignore imports that can't be resolved (e.g., third-party libraries without type stubs)
